Alignment fixes'

--- a/src/unavaiable/styles.css
+++ b/src/unavaiable/styles.css
@@ -1,11 +1,21 @@
-html {
+/* html {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+} */
+
+body {
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
+
 .unavaiable-wrapper {
   display: flex;
+  width: 100vw;
+  height: 100vh;
 }
 .unavaiable-banner {
   display: flex;
@@ -15,6 +25,8 @@ html {
 .unavaiable-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  width: 74vw;
 }
 .unavaiable-content h1 {
   font: normal normal 900 90px/118px Roboto;
@@ -36,6 +48,7 @@ html {
   letter-spacing: -0.44px;
   color: #4a4a4a;
 }
+
 .unavaiable-content small {
 }
 
@@ -45,7 +58,15 @@ html {
 .unavaiable-options {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
+
+.unavaiable-options div {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
 section {
   display: flex;
   flex-direction: column;
@@ -55,4 +76,5 @@ section {
 }
 .unavaiable-intro {
   text-align: end;
+  max-width: 50%;
 }
